--- a/src/general-css-scss/variables/_custom.scss
+++ b/src/general-css-scss/variables/_custom.scss
@@ -14,7 +14,6 @@ html,
 body {
     max-width: 100% !important;
     overflow-x: hidden !important;
-    background-color: black
 }
 
 ul,
@@ -32,6 +31,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 
@@ -43,4 +43,12 @@ a {
     #fp-nav {
         display: none !important;
     }
+}
+
+.nav-item.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
+.dropdown-toggle::after{
+    display: none!important;
 }
