--- a/src/general-css-scss/variables/_typography.scss
+++ b/src/general-css-scss/variables/_typography.scss
@@ -6,3 +6,7 @@ body {
 $font-family-base: "Poppins";
 $headings-font-family: "Poppins";
 $headings-font-weight: 800;
+
+.textUppercase{
+    text-transform: uppercase;
+}
