--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -12,3 +12,13 @@
     justify-content: center;
     align-items: flex-start;
 }
+.product-img{
+    width: 150px;
+}
+
+/* PC */
+@media (min-width: 992px) {
+    .product-img{
+        width: 400px;
+    }
+}
