Técnicas de rendering & Utilizando Firebase

--- a/src/general-css/styles.css
+++ b/src/general-css/styles.css
@@ -79,4 +79,8 @@ a {
 .dropdown-toggle::after {
   display: none !important;
 }
+
+svg {
+  cursor: pointer;
+}
 /*# sourceMappingURL=styles.css.map */
