--- a/src/components/Cart/CartWidget/CartWidget.css
+++ b/src/components/Cart/CartWidget/CartWidget.css
@@ -1,3 +1,13 @@
 .cart{
     margin-right: 2%!important;
 }
+.cart-counter{
+    border-radius: 50%;
+    font-size: 0.5rem;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    right: 27px;
+    top: 24px;
+    background-color: rgb(145 123 82)!important;
+}
