--- a/src/components/Cart/CartWidget/CartWidget.css
+++ b/src/components/Cart/CartWidget/CartWidget.css
@@ -1,13 +1,10 @@
-.cart{
-    margin-right: 2%!important;
-}
 .cart-counter{
     border-radius: 50%;
     font-size: 0.5rem;
-    width: 15px;
-    height: 15px;
+    width: 16px;
+    height: 16px;
     position: absolute;
-    right: 27px;
-    top: 24px;
-    background-color: rgb(145 123 82)!important;
+    right: 55px;    
+    top: 27px;
+    background-color: rgb(210, 197, 247)!important;
 }
