--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -1,21 +1,23 @@
 :root {
-    --primary: rgb(255, 202, 104);
+    --primary: rgb(255, 255, 255);
 }
 .navbar{
     background-color: black!important;
 }
 .img-logo{
-    width: 40px;
+    width: 45px;
 }
 .container-navbar{
-    padding: 0 10px!important;
+    /* padding: 0 10px!important; */
     max-width: 100%!important;
-    margin-left: 2%!important;
+    justify-content: flex-start!important;
+    flex-wrap: nowrap!important;
 }
 .link{
-    color: rgba(255,255,255,.55);
+    color: rgba(177, 177, 177, 0.767);
     padding: 8px;
     text-decoration: none;
+    font-family: 'Abel', Arial;
 }
 .link:hover{
     color: var(--primary)!important;
@@ -28,4 +30,142 @@
 }
 .dropdown-item:hover{
     background-color: rgb(197, 197, 197)!important;
+}
+.navbar-brand{
+    margin-right: 0;
+}
+
+.titles{
+    display: flex;
+    align-items: center;
+    width: 100vw!important;
+}
+
+.title{
+    text-decoration: none;
+    color: white!important;
+    font-family: 'Abel', Arial;
+    font-size: 1.1rem;
+    letter-spacing: -1px;
+    font-weight: 300;
+    white-space: nowrap;
+    padding: 0;
+}
+
+.btn-navbar{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100vw!important;
+}
+
+.nav-items{
+    background-color: rgb(53, 53, 53);
+    position: fixed;
+    z-index: 2;
+    height: 40%;
+    top: 6px;
+    right: 12px;
+    width: 20%;
+    display: flex;
+    flex-direction: column !important;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding-left: 1.5%;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .4s ease-in-out;
+}
+
+.open-nav{
+    opacity: 1;
+    visibility: visible;
+}
+.close-nav{
+    opacity: 0;
+    visibility: hidden;
+}
+
+@media screen and (min-width:991px) and (max-width: 1112px) {
+    .puma-logo-txt{
+        padding-left: 2%;
+    }
+}
+
+
+/* BTN */
+#nav-icon {
+    width: 35px;
+    height: 11px;
+    /* margin: 50px auto; */
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: 0.5s ease-in-out;
+    -moz-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+    z-index: 50;
+}
+
+#nav-icon span {
+    display: block;
+    position: absolute;
+    height: 0.5px;
+    width: 50%;
+    background: rgb(255, 255, 255);
+    border-radius: 8px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: 0.25s ease-in-out;
+    -moz-transition: 0.25s ease-in-out;
+    -o-transition: 0.25s ease-in-out;
+    transition: 0.25s ease-in-out;
+    box-shadow: 0px 0px 0.2px 0.28px rgb(53, 53, 53);
+}
+
+#nav-icon span:nth-child(1) {
+    top: 0px;
+}
+
+#nav-icon span:nth-child(2),
+#nav-icon span:nth-child(3) {
+    top: 8px;
+}
+
+#nav-icon span:nth-child(4) {
+    top: 16px;
+}
+
+#nav-icon.open span:nth-child(1) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+}
+
+#nav-icon.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+#nav-icon.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+#nav-icon.open span:nth-child(4) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
 }
