--- a/src/general-css/variables/_custom.scss
+++ b/src/general-css/variables/_custom.scss
@@ -14,6 +14,11 @@ html,
 body {
     max-width: 100% !important;
     overflow-x: hidden !important;
+    background-color: #fafafa!important;
+}
+
+#root{
+    background-color: #fafafa;
 }
 
 ul,
@@ -30,8 +35,8 @@ a {
 .center {
     display: flex;
     align-items: center;
-    justify-content: center;
-    text-align: center;
+    justify-content: center!important;
+    text-align: center!important;
 }
 
 
@@ -55,4 +60,20 @@ a {
 
 svg{
     cursor: pointer;
+}
+
+// Scrollbar
+::-webkit-scrollbar{
+    width: 7px;
+    background-color: black;
+}
+
+::-webkit-scrollbar-track{
+    // border-radius: 5px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.034);
+}
+
+::-webkit-scrollbar-thumb{
+    // border-radius: 5px;
+    background-color: rgb(226, 226, 226);
 }
