--- a/src/components/Cart/CartWidget/CartWidget.css
+++ b/src/components/Cart/CartWidget/CartWidget.css
@@ -6,5 +6,5 @@
     position: absolute;
     right: 55px;    
     top: 27px;
-    background-color: rgb(210, 197, 247)!important;
+    background-color: rgb(238 205 211)!important;
 }
