--- a/src/components/Cart/Cart/Cart.css
+++ b/src/components/Cart/Cart/Cart.css
@@ -64,7 +64,7 @@
 .card-cart {
     border: 1px solid #d0d0d0 !important;
     padding: 20px 0;
-    width: 500px;
+    width: -webkit-fill-available;
 }
 .delete-btn {
     position: absolute;
