--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -169,3 +169,11 @@
     width: 0%;
     left: 50%;
 }
+
+
+/* SMARTPHONE */
+@media (max-width: 576px) {
+    .nav-items{
+        width: 50%;
+    }
+}
