--- a/src/components/Cart/Cart/Cart.css
+++ b/src/components/Cart/Cart/Cart.css
@@ -187,3 +187,20 @@
 .min-height{
     min-height: 90vh;
 }
+
+/* SMARTPHONE */
+@media (max-width: 576px) {
+    .center-cart{
+        padding: 0 0 30px 0;
+    }
+    .card-cart {
+        padding: 51px 0;
+        width: max-content;
+    }
+    .row-resume {
+        transform: translate(0, 0);
+    }
+    .description {
+        padding-right: 2%;
+    }
+}
