--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -62,7 +62,7 @@
 .nav-items {
     background-color: rgb(53, 53, 53);
     position: fixed;
-    /* z-index: 2; */
+    z-index: 2;
     height: 40%;
     top: 6px;
     right: 12px;
@@ -106,6 +106,7 @@
     -o-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
     cursor: pointer;
+    z-index: 5;
 }
 
 #nav-icon span {
